Fixed page sizing issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,14 @@ h1 {
     }
 }
 
+@media only screen and (max-width: 960px) { 
+
+    .footer {
+        /* flex-wrap: wrap; */
+        flex-direction: column;
+    }
+}
+
 .header-text {
     color: #F0F7EF;
     text-align: center;
